Create NU directory app structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.2
   provider: ^6.0.5
   url_launcher: ^6.2.6
-  shimmer: ^3.0.0
 
 flutter:
   uses-material-design: true
