--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.2.2
   provider: ^6.0.5
   url_launcher: ^6.2.6
+  webview_flutter: ^4.8.0
 
 flutter:
   uses-material-design: true
